Add first db migration

--- a/FurRealCute.Web.Api/appsettings.Development.json
+++ b/FurRealCute.Web.Api/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=FurRealCute;User Id=postgres;Password=admin;"
     }
   }
 }
