--- a/FurRealCute.Web.Api/appsettings.json
+++ b/FurRealCute.Web.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=FurRealCute;User Id=postgres;Password=admin;"
+  },
   "AllowedHosts": "*"
 }
